# dotfiles

./: .gitignore  .gitmodules  .mbsyncrc  README.md  afew-config  claude-mcp-tools.el  company-lsp-hash-check.patch  config.nix  doom-modals-everywhere.patch  dotEmacs  early-init.el  emacs  emacs.nix  get-mail.sh  god-segment-project.patch  god-segment.patch  gpg-agent.conf  lsp-mode-hash-check.patch  lsp-mode-unreadable-folders.patch  lsp-ui-doc-hide-fix.patch  lsp-ui-window-change-no-hide.patch  mailcap  make_symlinks.sh  notmuch-config  notmuch-gmi.sh  notmuch-sync-new.sh  org-short-caption.patch  org.gnupg.gpg-agent.plist  overlays.nix  rocm.nix  stack-config.yaml
emacs-overlay/: deft-org-titles.patch  flake.nix  ox-reveal-4.0.patch
emacs-overlay/nix/: sources.json
home/: common.nix  flake.nix  home-pop.nix  home.nix  linux.nix  macos.nix  serve.nix
home/pkgs/: poppins.nix
my-emacs/: deft-org-titles.patch  emacs.nix  flake.nix  lsp-unicode.patch  synosaurus-wordnet3.1.patch
mynixpkgs/: flake.nix
nix/: intero-no-compiler-tools.patch  kwin-tiling.nix  montserrat.nix  mylatex.nix  nunito.nix  victor-mono.nix  wordnet.nix
nix/GlobalProtect-openconnect/: default.nix
nix/SDL_gpu/: default.nix
nix/SDL_gpu_demo/: a.out  shell.nix
nix/adi1090x-plymouth/: default.nix  flake.nix
nix/alglib/: CMakeLists.txt  default.nix
nix/caire/: default.nix
nix/catch2/: default.nix
nix/ccls/: default.nix  nixAware.nix
nix/cquery/: cxx.nix  (+2 more)
nix/pcl_demo/: CMakeLists.txt  default.nix  pcl_visualizer_demo.cpp  shell.nix
pinentry/: Main.hs
testnixpkgs/: flake.nix
(+73 files in other folders)
